--- a/src/scss/_animate.scss
+++ b/src/scss/_animate.scss
@@ -31,3 +31,23 @@
 .fadeOut {
   animation-name: fadeOut;
 }
+
+
+
+@keyframes fadein50 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: .5;
+  }
+}
+
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
