--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -15,11 +15,15 @@ header {
     position: fixed;
     z-index: 10000 !important;
 
+    height: 100vh;
+    width: 72px;
+
     @media (max-width: $mobile-max-width) {
         display: flex;
         justify-content: space-between;
 
         width: 100%;
+        height: auto;
         background-color: rgba(255,255,255,.9);
     }
 }
