--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -2,5 +2,8 @@
     text-transform: uppercase;
 }
 .u-spaced-out {
-    letter-spacing: 4px;
+    letter-spacing: 2.5px;
+}
+.u-align--center {
+    text-align: center;
 }
