--- a/src/scss/_spacing.scss
+++ b/src/scss/_spacing.scss
@@ -8,6 +8,9 @@
 .u-padding--top {
     padding-top: 20px;
 }
+.u-padding--top--none {
+    padding-top: 0 !important;
+}
 .u-padding--bottom--none {
     padding-bottom: 0 !important;
 }
