--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,8 +1,7 @@
 // About
-.about-container {
+.home--about__wrapper {
     color: white;
     background-color: $navy;
-    padding: 60px 0;
 
     @media (max-width: $mobile-max-width) {
         margin: -60px -40px !important;
@@ -15,6 +14,19 @@
         font-size: 18px;
         color: white;
     }
+}
+
+.home--about-excerpt__wrapper {
+    display: flex;
+    flex-direction: row;
+
+    @media (max-width: $mobile-max-width) {
+        flex-wrap: wrap;
+        &>* {
+            width: 100%;
+        }
+    }
+
 }
 .about-featured-image__wrapper {
     position: relative;
@@ -31,7 +43,7 @@
 }
 .home--about-excerpt {
     font-size: 20px !important;
-    line-height: 32px !important;
+    line-height: 26px!important;
 }
 .home--about-more__wrapper {
     background-color: $navy;
