--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,6 +43,7 @@ Domain Path: #{metadata(theme-text-domain-path)}
 @import "header";
 @import "pagination";
 @import "footer";
+@import "section";
 
 // Pages
 @import "home";
