--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,7 @@ Domain Path: #{metadata(theme-text-domain-path)}
 @import "bootstrap-customizations";
 @import "text";
 @import "spacing";
+@import "button";
 
 // Components
 @import "theme";
