--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -6,7 +6,7 @@
     display: block;
     min-width: 100%;
     max-width: 100%;
-    min-height: 100%;
+    // min-height: 100%;
     width: auto;
     height: auto;
     background-size: cover;
