--- a/src/scss/_clients.scss
+++ b/src/scss/_clients.scss
@@ -7,20 +7,15 @@
     margin-top: -40px; // Pull the first row up
 }
 .homepage--client-logo {
-    width: 180px;
+    width: calc(calc(100vw - 72px - 17px) / 6); // left and right site margins
     background-size: contain;
-    margin: 0;
+
+    @media (max-width: $tablet-max-width) {
+        width: calc(calc(100vw - 72px - 17px) / 3);
+    }
 
     @media (max-width: $mobile-max-width) {
         width: calc(calc(100vw - 120px) / 2);
-        margin: 0;
-
-        &:nth-of-type(3n-2) {
-            margin-left: 0;
-        }
-        &:nth-of-type(3n) {
-            margin-right: 0;
-        }
     }
 }
 
