--- a/src/scss/_work.scss
+++ b/src/scss/_work.scss
@@ -178,7 +178,7 @@
         flex-wrap: wrap;
     }
 }
-.portfolio-grid-item--5, .portfolio-grid-item--6, .portfolio-grid-item--7 {
+.portfolio-grid-item--5, .portfolio-grid-item--6, .portfolio-grid-item--7, .portfolio-grid-item--8-plus__wrapper {
     width: calc(100vw/3);
     height: calc(100vw/3);
 
