--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -83,7 +83,7 @@ header {
 .nav-toggle--icon-show {
     display: block;
 }
-.nav-toggle--icon--hide {
+i.nav-toggle--icon--hide {
     display: none;
 }
 
