--- a/src/scss/_spacing.scss
+++ b/src/scss/_spacing.scss
@@ -1,16 +1,27 @@
 .u-margin--top {
-    margin-top: 20px;
+    margin-top: 20px !important;
 }
 .u-margin--bottom {
     margin-bottom: 20px;
 }
+.u-margin--bottom--none {
+    margin-bottom: 0 !important;
+}
+.u-margin--vertical {
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+}
 
 .u-padding--top {
-    padding-top: 20px;
+    padding-top: 20px !important;
 }
 .u-padding--top--none {
     padding-top: 0 !important;
 }
 .u-padding--bottom--none {
     padding-bottom: 0 !important;
+}
+.u-padding--vertical {
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
 }
